chagnes in email template

--- a/services/EmailTemplate/orderTemplate.hbs
+++ b/services/EmailTemplate/orderTemplate.hbs
@@ -87,6 +87,9 @@
             <p><strong>pincode:</strong> {{pincode}}</p>
             <p><strong>Order Status:</strong> {{ordStatus}}</p>
             <p><strong>Payment Type:</strong> {{payType}}</p>
+            <br>
+            <p><strong>Coupon Details:</strong></p>
+            <p><strong>Coupon Code: {{couponCode}}</strong></p>
             <p><strong>discount:</strong> {{discount}}</p>
 
             <h2 class="title-label">Order Items:</h2>
