--- a/services/EmailTemplate/customerNotification.hbs
+++ b/services/EmailTemplate/customerNotification.hbs
@@ -84,7 +84,11 @@
             <h2 class="title-label">Shipping Information:</h2>
             <p><strong>Domestic Orders:</strong> Expected delivery within 6-7 business days</p>
             <p><strong>International Orders:</strong> Expected delivery within 12-15 business days</p>
-
+            <br>
+            <p><strong>Coupon Details:</strong></p>
+            <p><strong>Coupon Code: {{couponCode}}</strong></p>
+            <p><strong>discount:</strong> {{discount}}</p>
+                
             <h2 class="title-label">Order Details:</h2>
             {{#each orderItems}}
             <div class="order-item">
@@ -92,7 +96,7 @@
                 <div class="product-details">
                     <p><strong>Product:</strong> <a href={{this.productName}} target="_blank">{{this.productTitle}}</a></p>
                     <p class="grey-color"><strong>Quantity:</strong> {{this.quantity}}</p>
-                    <p><strong>Price:</strong> {{this.price}}</p>
+                    <p><strong>Price:</strong> {{this.price}} each</p>
                 </div>
             </div>
             {{/each}}
