--- a/services/EmailTemplate/customerNotification.hbs
+++ b/services/EmailTemplate/customerNotification.hbs
@@ -87,7 +87,7 @@
             <br>
             <p><strong>Coupon Details:</strong></p>
             <p><strong>Coupon Code: {{couponCode}}</strong></p>
-            <p><strong>discount:</strong> {{discount}}</p>
+            <p><strong>discount:</strong>{{currCode}} {{discount * currRate}}</p>
                 
             <h2 class="title-label">Order Details:</h2>
             {{#each orderItems}}
@@ -96,7 +96,7 @@
                 <div class="product-details">
                     <p><strong>Product:</strong> <a href={{this.productName}} target="_blank">{{this.productTitle}}</a></p>
                     <p class="grey-color"><strong>Quantity:</strong> {{this.quantity}}</p>
-                    <p><strong>Price:</strong> {{this.price}} each</p>
+                    <p><strong>Price:</strong> {{currCode}} {{this.price * currRate}} each</p>
                 </div>
             </div>
             {{/each}}
