--- a/services/EmailTemplate/customerNotification.hbs
+++ b/services/EmailTemplate/customerNotification.hbs
@@ -96,7 +96,7 @@
                 <div class="product-details">
                     <p><strong>Product:</strong> <a href={{this.productName}} target="_blank">{{this.productTitle}}</a></p>
                     <p class="grey-color"><strong>Quantity:</strong> {{this.quantity}}</p>
-                    <p><strong>Price:</strong> <p>{{this.code}}</p> {{this.price}} each</p>
+                    <p><strong>Price:</strong> {{this.code}} {{this.price}} each</p>
                 </div>
             </div>
             {{/each}}
