--- a/services/EmailTemplate/orderTemplate.hbs
+++ b/services/EmailTemplate/orderTemplate.hbs
@@ -99,7 +99,7 @@
                 <div class="product-details">
                     <p><strong>Product:</strong> {{this.productName}}</p>
                     <p class="grey-color"><strong>Quantity:</strong> {{this.quantity}}</p>
-                    <p><strong>Price:</strong><p>{{this.code}}</p> {{this.price}} each</p>
+                    <p><strong>Price:</strong> {{this.code}} {{this.price}} each</p>
                 </div>
             </div>
             {{/each}}
