change email and phone

--- a/services/EmailTemplate/orderTemplate.hbs
+++ b/services/EmailTemplate/orderTemplate.hbs
@@ -77,20 +77,20 @@
             <p><strong>Address:</strong> {{address}}</p>
             <p><strong>City:</strong> {{city}}</p>
             <p><strong>State:</strong> {{state}}</p>
-            <p><strong>Coountry:</strong> {{country}}</p>
-            <p><strong>pincode:</strong> {{pincode}}</p>
+            <p><strong>Country:</strong> {{country}}</p>
+            <p><strong>Pincode:</strong> {{pincode}}</p>
             <br>
             <p><strong>Billing Address:</strong></p>
             <p><strong>City:</strong> {{city}}</p>
             <p><strong>State:</strong> {{state}}</p>
-            <p><strong>Coountry:</strong> {{country}}</p>
-            <p><strong>pincode:</strong> {{pincode}}</p>
+            <p><strong>Country:</strong> {{country}}</p>
+            <p><strong>Pincode:</strong> {{pincode}}</p>
             <p><strong>Order Status:</strong> {{ordStatus}}</p>
             <p><strong>Payment Type:</strong> {{payType}}</p>
             <br>
             <p><strong>Coupon Details:</strong></p>
             <p><strong>Coupon Code: {{couponCode}}</strong></p>
-            <p><strong>discount:</strong> {{currCode}} {{discount}}</p>
+            <p><strong>Discount:</strong> {{currCode}} {{discount}}</p>
 
             <h2 class="title-label">Order Items:</h2>
             {{#each orderItems}}
