--- a/services/EmailTemplate/customerNotification.hbs
+++ b/services/EmailTemplate/customerNotification.hbs
@@ -87,7 +87,7 @@
             <br>
             <p><strong>Coupon Details:</strong></p>
             <p><strong>Coupon Code: {{couponCode}}</strong></p>
-            <p><strong>discount:</strong> {{currCode}} {{discount}}</p>
+            <p><strong>Discount:</strong> {{currCode}} {{discount}}</p>
                 
             <h2 class="title-label">Order Details:</h2>
             {{#each orderItems}}
